# Train-c-

./: README.md
assingnment1/: CMakeLists.txt  Oval.txt  ass1  ass1.cpp  ass_Models.cpp  ass_Models.h  back_train.tga  backup  backup.cpp  ground.tga  head.tga  left_train.tga  right.tga  roof.tga  snow.tga  train_top.tga  tun.tga  tun2.tga  wagon.tga  wall.tga
